# Doc_QnA

./: .gitignore  README.md  alembic.ini  build-release.sh  config.example.yaml  config.yaml  config.yaml.example  pyproject.toml  run.bat  run.sh
.github/workflows/: eval.yml
doc_qa/: __init__.py  __main__.py  config.py
doc_qa/api/: __init__.py  server.py
doc_qa/conversations/: store.py
doc_qa/db/: __init__.py  engine.py  models.py  repository.py
eval/: test_cases.json
frontend/: config.yaml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
pytest-of-subhankarhalder/: pytest-current
scripts/: eval-guard.sh  package.json  validate_mermaid.mjs
tests/: response_bank.py  test_adaptive_filtering.py  test_api.py  test_api_indexing.py  test_audit_fixes.py  test_chunker.py  test_corrective.py  test_date_extractor.py  test_dedup.py  test_embedder.py  test_evaluator.py  test_feedback.py  test_feedback_booster.py  test_feedback_converter.py  test_generators.py  test_harness.py  test_indexer.py  test_indexing_job.py  test_integration.py  test_integration_edge_cases.py  test_integration_intelligence.py  test_intelligence.py  test_llm_backend.py  test_llm_endpoints.py  test_parent_child_chunker.py  test_parent_child_retrieval.py  test_parsers.py  test_query_expander.py  test_query_pipeline.py  test_reranker.py  test_retriever.py  test_scanner.py  test_scenarios.py  test_score_normalizer.py  test_source_attributor.py  test_streaming.py  test_verification.py
(+168 files in other folders)
